authentication filter with login page front end code

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -5,8 +5,8 @@
   </h1>
 </div>
 
-<a routerLink="/users">List Users</a>
-<a style="margin-left:10px" routerLink="/add">Add User</a>
+<a routerLink="/users/list">List Users</a>
+<a style="margin-left:10px" routerLink="/users/add">Add User</a>
 <br/>
 <router-outlet></router-outlet>
 </div>
