--- a/web/src/app/user/list/user.component.html
+++ b/web/src/app/user/list/user.component.html
@@ -1,21 +1,24 @@
+
 <div class="col-md-6">
 <h2> User Details</h2>
 
 <table class="table table-striped">
   <thead>
   <tr>
-    <th class="hidden">Id</th>
-    <th>FirstName</th>
-    <th>LastName</th>
+    <th>Id</th>
+    <th>Name</th>
+    <th>Department</th>
+    <th>Salary</th>
     <th>Email</th>
     <th>Action</th>
   </tr>
   </thead>
   <tbody>
   <tr *ngFor="let user of users">
-    <td class="hidden">{{user.id}}</td>
-    <td>{{user.firstName}}</td>
-    <td>{{user.lastName}}</td>
+    <td>{{user.id}}</td>
+    <td>{{user.name}}</td>
+    <td>{{user.department}}</td>
+    <td>{{user.salary}}</td>
     <td>{{user.email}}</td>
     <td><button class="btn btn-danger" (click)="deleteUser(user)"> Delete User</button></td>
   </tr>
